--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-scripts": "2.0.4",
+    "react-youtube": "^7.9.0",
     "reactstrap": "^7.1.0"
   },
   "scripts": {
