--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "build": "cd client && npm run build",
     "heroku-postbuild": "npm run build"
   },
+  "engines": {
+    "node": "8.12.0"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/mmarovich/MERN-starter.git"
