--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "heroku-postbuild": "npm run build"
   },
   "engines": {
-    "node": "8.12.0"
+    "node": "8.12.0",
+    "yarn": "1.13.0"
   },
   "repository": {
     "type": "git",
